// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <LanguageCard
      name="JavaScript"
      slug="javascript"
      totalDevelopers={768}
      totalRepositories={2150}
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <Link
            replace={false}
            to="/language/javascript"
          >
            <a
              href="/language/javascript"
              onClick={[Function]}
            >
              JavaScript
            </a>
          </Link>
          <div>
            <Link
              replace={false}
              to="/language/javascript/developers"
            >
              <a
                href="/language/javascript/developers"
                onClick={[Function]}
              >
                768
                 Geliştirici
              </a>
            </Link>
            <Link
              replace={false}
              to="/language/javascript/repositories"
            >
              <a
                href="/language/javascript/repositories"
                onClick={[Function]}
              >
                2,150
                 Repo
              </a>
            </Link>
          </div>
        </div>
      </Box>
    </LanguageCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly with rank 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <LanguageCard
      name="JavaScript"
      rank={1}
      slug="javascript"
      totalDevelopers={768}
      totalRepositories={2150}
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <Link
            replace={false}
            to="/language/javascript"
          >
            <a
              href="/language/javascript"
              onClick={[Function]}
            >
              #1 JavaScript
            </a>
          </Link>
          <div>
            <Link
              replace={false}
              to="/language/javascript/developers"
            >
              <a
                href="/language/javascript/developers"
                onClick={[Function]}
              >
                768
                 Geliştirici
              </a>
            </Link>
            <Link
              replace={false}
              to="/language/javascript/repositories"
            >
              <a
                href="/language/javascript/repositories"
                onClick={[Function]}
              >
                2,150
                 Repo
              </a>
            </Link>
          </div>
        </div>
      </Box>
    </LanguageCard>
  </Router>
</MemoryRouter>
`;
